// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ActivityIndicator renders with custom styles 1`] = `
<View
  style={
    {
      "backgroundColor": "green",
    }
  }
>
  <ActivityIndicator
    color="green"
    size="large"
    testID="activity-indicator-test"
  />
</View>
`;

exports[`ActivityIndicator renders with default styles 1`] = `
<View
  style={{}}
>
  <ActivityIndicator
    color="gray"
    size="large"
    testID="activity-indicator-test"
  />
</View>
`;
